# WordCount

./: CMakeLists.txt  README.md  note.md  start.sh
WordCount_test/: file3.out  file4
include/: hashtable.h  mapreduce.h  mthread.h  mytype.h
src/: CMakeLists.txt  wordcount.c
src/hash/: CMakeLists.txt  hashtable.c  main  main.c_  start.sh
src/hash/src/: temp.c
src/mapreduce/: CMakeLists.txt  mapreduce.c
src/mthread/: CMakeLists.txt  main.c_  mthread.c
src/type/: CMakeLists.txt  mytype.c
